Changes from jTDS 0.8.1
=========================

08/05/2004 - Brian Heineman
 o Applied Mike Hutchinson's patch for [996631] Refactoring and some performance
   optimization.
 o Removed extraneous import statements.
 o Added check in data conversion for LOB values with a length greater than
   2,147,483,647.
 o Added "and Sybase" to JtdsDatabaseMetaData.getDriverName().

08/04/2004 - Brian Heineman
 o Applied patch in bug [1003507] Cursor result set close error;
   (thanks to Mike Hutchinson for report and the fix).
 o Removed assertEquals(double,double) to avoid Eclipse execution failures.

08/04/2004 - David Kilzer
 o Renamed Settings class to DefaultProperties to match its use.  Removed
   redundant "DEFAULT_" prefix from its public static constants.
 o Refactored DefaultProperties to remove duplicate code.
 o Created DefaultPropertiesUnitTest to test new methods in DefaultProperties.
 o Moved methods related to Messages.propertes from Support class to new
   Messages class.  Support.getMessage() is now Messages.get().
 o Wrote unit test for Driver.getPropertyInfo() in preparation for future
   refactoring.

08/03/2004 - Brian Heineman
 o Applied patch in bug [1002811] Poor performance of cursor result sets;
   (thanks to Mike Hutchinson for the fix).
 o Applied patch in bug  [1001956] updateBytes() converted to hex string in
   varchar; (thanks to Mike Hutchinson for the fix).

08/03/2004 - David Kilzer
 o Swapped descriptions of appName and progName in FAQ.
 o Renamed internal libName variable to progName to match external property.
 o Cleaned up Messages.properties to remove prop.libname (prop.progname already
   existed) and to add prop.desc.appname and prop.desc.progname properties.
 o Clean up comments to reference Driver.SQLSERVER and Driver.SYBASE instead of
   TdsCore or old Tds classes.
 o Add code to check for inherited methods, not just locally declared methods,
   in UnitTestBase static methods.