@@ -1,6 +1,11 @@
 Changes from jTDS 0.8.1
 =========================
 
+08/05/2004 - David Kilzer
+ o Added missing javadoc to DriverUnitTest methods.
+ o Renamed Messages.defaultResource to Messages.DEFAULT_RESOURCE to reflect its
+   use.
+
 08/05/2004 - Brian Heineman
  o Applied Mike Hutchinson's patch for [996631] Refactoring and some performance
    optimization.
